# HVlov-server

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: linux.yml  macos.yml  main.yml  windows.yml
cmake/: CompilerWarnings.cmake  Conan.cmake  Coverage.cmake  DefaultCompilerFlags.cmake  FixCompilerSpecificStuff.cmake  Sanitizers.cmake  SetupGlobalCMakeFlags.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
hvlov-server/: CMakeLists.txt
hvlov-server/config/: CMakeLists.txt
hvlov-server/exe-hvlov-server/: CMakeLists.txt
hvlov-server/hvlov-entries/: CMakeLists.txt
hvlov-server/hvlov-entries/include/: HvlovEntry.hpp  HvlovEntryBuilder.hpp  IHvlovEntryBuilder.hpp  IHvlovEntrySerializer.hpp
hvlov-server/hvlov-entries/src/: HvlovEntrySerializer.cpp
hvlov-server/hvlov-entries/tests/: CMakeLists.txt
hvlov-server/hvlov-entries/tests/src/: TestHvlovEntrySerializer.cpp
hvlov-server/lib-hvlov-server/: CMakeLists.txt
hvlov-server/lib-hvlov-server/include/: HttpRequest.hpp  HttpResponse.hpp  HttpServerWrapper.hpp  HvlovServer.hpp  IHttpServerWrapper.hpp  IHvlovServer.hpp  ServerConnectionInfo.hpp
hvlov-server/lib-hvlov-server/src/: HttpServerWrapper.cpp
hvlov-server/src/: BaseInterface.hpp  FileInfo.hpp  FileSystemLister.cpp  FileSystemLister.hpp  FileSystemListerService.cpp  FileSystemListerService.hpp  HttpServerWrapper.cpp  HttpServerWrapper.hpp  HvlovEntry.cpp  HvlovEntry.hpp  HvlovEntryBuilder.cpp  HvlovEntryBuilder.hpp  HvlovEntryFormatter.cpp  HvlovEntryFormatter.hpp  HvlovEntrySerializer.cpp  HvlovEntrySerializer.hpp  HvlovServer.cpp  HvlovServer.hpp  IFileSystemLister.hpp  IFileSystemListerService.hpp  IHvlovEntryBuilder.hpp  IHvlovEntryFormatter.hpp  PimplDeleter.hpp  ServerConnexionInfo.hpp  Url.cpp  Url.hpp  main.cpp
hvlov-server/utils/: CMakeLists.txt
hvlov-server/utils/include/: Url.hpp
hvlov-server/utils/tests/: CMakeLists.txt
hvlov-server/utils/tests/src/: TestUrl.cpp
tests/: CMakeLists.txt
tests/hvlov-server/: CMakeLists.txt
tests/hvlov-server/src/: TestHvlovEntryBuilder.cpp  TestHvlovEntryFormatter.cpp  TestHvlovEntrySerializer.cpp  TestUrl.cpp
